src/objects/Pregunta_AccountGrowthStrategy__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preguntas AccountGrowthStrategy</relationshipLabel>
        <relationshipName>Preguntas_AccountGrowthStrategy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_these_TOP_opps_you_just_mentioned_p__c</fullName>
        <label>For these TOP opps you just mentioned, p</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Include_more_relevant_opportunities_you__c</fullName>
        <label>Include more relevant opportunities you</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_are_your_Top_opportunities_that_wil__c</fullName>
        <label>What are your Top opportunities that wil</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_are_your_plans_to_develop_and_grow__c</fullName>
        <label>What are your plans to develop and grow</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Pregunta AccountGrowthStrategy</label>
    <nameField>
        <label>Nombre de Preguntas AccountGro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preguntas AccountGrowthStrategy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>